Live coding session12 - Vicálvaro

--- a/PF-3/templates/3.1-HigherOrderFunctions.ipynb
+++ b/PF-3/templates/3.1-HigherOrderFunctions.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +27,7 @@
        "\u001b[32mimport \u001b[39m\u001b[36m_root_.org.scalatest._\u001b[39m"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2161,9 +2161,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mclass\u001b[39m \u001b[36mTestLengths\u001b[39m"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "class TestLengths(\n",
     "    lengths: List[String] => List[Int]\n",
@@ -2177,7 +2188,11 @@
     "    \n",
     "    \"lengths\" should \"work\" in {\n",
     "        lengths(paragraph1) shouldBe \n",
-    "            ???\n",
+    "            List(\n",
+    "        2, 2,  5,\n",
+    "        2,  2, 6, \n",
+    "        2, 4, 6, 2,\n",
+    "        6, 9)\n",
     "    }\n",
     "}"
    ]
@@ -2191,12 +2206,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[36mres8\u001b[39m: \u001b[32mList\u001b[39m[\u001b[32mString\u001b[39m] = \u001b[33mList\u001b[39m(\u001b[32m\"en\"\u001b[39m, \u001b[32m\"\"\u001b[39m, \u001b[32m\"un\"\u001b[39m, \u001b[32m\"lugar\"\u001b[39m)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"en  un lugar\". split(\" \").toList"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mlengthsM\u001b[39m"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def lengthsM(paragraph: List[String]): List[Int] = {\n",
-    "    ???\n",
+    "    var out: List[Int] = List()\n",
+    "    for (sentence <- paragraph)\n",
+    "        for (word <- sentence.split(\" \"))\n",
+    "            if (word != \"\") \n",
+    "                out = out :+ word.length\n",
+    "    //out.reverse\n",
+    "    out\n",
     "}\n"
    ]
   },
@@ -2209,9 +2261,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mcmd4$Helper$TestLengths:\u001b[0m\n",
+      "\u001b[32mlengths\u001b[0m\n",
+      "\u001b[32m- should work\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "run(new TestLengths(lengthsM))"
    ]
@@ -2225,12 +2287,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[36mres15\u001b[39m: \u001b[32mList\u001b[39m[\u001b[32mInt\u001b[39m] = \u001b[33mList\u001b[39m(\u001b[32m2\u001b[39m, \u001b[32m2\u001b[39m, \u001b[32m5\u001b[39m, \u001b[32m2\u001b[39m, \u001b[32m2\u001b[39m, \u001b[32m6\u001b[39m, \u001b[32m2\u001b[39m, \u001b[32m4\u001b[39m, \u001b[32m6\u001b[39m, \u001b[32m2\u001b[39m, \u001b[32m6\u001b[39m, \u001b[32m9\u001b[39m)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "List(\n",
+    "        \"En un  lugar\",\n",
+    "        \"de  la Mancha \", \n",
+    "        \"de cuyo nombre no\",\n",
+    "        \"quiero        acordarme\")                   // List[Sentence]\n",
+    "    .flatMap(sentence => sentence.split(\" \").toList) // List[Word]\n",
+    "    .filter(word => word != \"\" : Boolean)            // List[Word]\n",
+    "    .map(word => word.length)                        // List[Int]\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def lengthsHOF(paragraph: List[String]): List[Int] = \n",
-    "    ???"
+    "    paragraph.flatMap()"
    ]
   },
   {
@@ -2268,12 +2358,217 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mlengthsFC\u001b[39m"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def lengthsFC(paragraph: List[String]): List[Int] = \n",
-    "    ???"
+    "    paragraph.flatMap(sentence => sentence.split(\" \").toList) // List[Word]\n",
+    "        .filter(word => word != \"\" : Boolean)            // List[Word]\n",
+    "        .map(word => word.length)                        // List[Int]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mlengthsFC\u001b[39m"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def lengthsFC(paragraph: List[String]): List[Int] = \n",
+    "    paragraph.flatMap(_.split(\" \").toList) // List[Word]\n",
+    "        .filter(_ != \"\")                   // List[Word]\n",
+    "        .map(_.length)                     // List[Int]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mlengthsFC\u001b[39m"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def lengthsFC(paragraph: List[String]): List[Int] = \n",
+    "    paragraph                              // List[Sentence]\n",
+    "        .flatMap(_.split(\" \").toList)      // List[Word]\n",
+    "        .map(_.length)                     // List[Int]\n",
+    "        .filter(_ != 0)                   // List[Int]\n",
+    "        \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mlengthsFC\u001b[39m"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def lengthsFC(paragraph: List[String]): List[Int] = \n",
+    "    paragraph                              // List[Sentence]\n",
+    "        .flatMap(sentence => \n",
+    "            sentence.split(\" \").toList\n",
+    "               .map(word => word.length)\n",
+    "               .filter(longitud => longitud != 0)// List[Int]\n",
+    "        ) // List[Int]\n",
+    "        \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[36mparagraph\u001b[39m: \u001b[32mList\u001b[39m[\u001b[32mString\u001b[39m] = \u001b[33mList\u001b[39m(\n",
+       "  \u001b[32m\"En un  lugar\"\u001b[39m,\n",
+       "  \u001b[32m\"de  la Mancha \"\u001b[39m,\n",
+       "  \u001b[32m\"de cuyo nombre no\"\u001b[39m,\n",
+       "  \u001b[32m\"quiero        acordarme\"\u001b[39m\n",
+       ")"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "val paragraph = List(\n",
+    "        \"En un  lugar\",\n",
+    "        \"de  la Mancha \", \n",
+    "        \"de cuyo nombre no\",\n",
+    "        \"quiero        acordarme\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[36mres29\u001b[39m: \u001b[32mList\u001b[39m[\u001b[32mInt\u001b[39m] = \u001b[33mList\u001b[39m(\u001b[32m2\u001b[39m, \u001b[32m2\u001b[39m, \u001b[32m5\u001b[39m, \u001b[32m2\u001b[39m, \u001b[32m2\u001b[39m, \u001b[32m6\u001b[39m, \u001b[32m2\u001b[39m, \u001b[32m4\u001b[39m, \u001b[32m6\u001b[39m, \u001b[32m2\u001b[39m, \u001b[32m6\u001b[39m, \u001b[32m9\u001b[39m)"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "paragraph\n",
+    "    .flatMap(s => s.split(\" \").toList)\n",
+    "    .filter(w => w != \"\")    \n",
+    "    .map(w => w.length)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[36mres30\u001b[39m: \u001b[32mList\u001b[39m[\u001b[32mInt\u001b[39m] = \u001b[33mList\u001b[39m(\u001b[32m2\u001b[39m, \u001b[32m2\u001b[39m, \u001b[32m5\u001b[39m, \u001b[32m2\u001b[39m, \u001b[32m2\u001b[39m, \u001b[32m6\u001b[39m, \u001b[32m2\u001b[39m, \u001b[32m4\u001b[39m, \u001b[32m6\u001b[39m, \u001b[32m2\u001b[39m, \u001b[32m6\u001b[39m, \u001b[32m9\u001b[39m)"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "for {\n",
+    "    sentence <- paragraph \n",
+    "    word <- sentence.split(\" \").toList if word != \"\" \n",
+    "} yield word.length"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mlengthsFC\u001b[39m"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def lengthsFC(paragraph: List[String]): List[Int] = \n",
+    "    paragraph.flatMap(_.split(\" \").toList) // List[Word]\n",
+    "        .filter(_ != \"\")                   // List[Word]\n",
+    "        .map(_.length)                     // List[Int]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mcmd4$Helper$TestLengths:\u001b[0m\n",
+      "\u001b[32mlengths\u001b[0m\n",
+      "\u001b[32m- should work\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "run(new TestLengths(lengthsFC))"
    ]
   },
   {
@@ -2281,9 +2576,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "run(new TestLengths(lengthsFC))"
-   ]
+   "source": []
   }
  ],
  "metadata": {
