--- a/PF-3/exercises/ProblemSet5.ipynb
+++ b/PF-3/exercises/ProblemSet5.ipynb
@@ -12,9 +12,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[32mimport \u001b[39m\u001b[36m$ivy.$                               \n",
+       "\u001b[39m\n",
+       "\u001b[32mimport \u001b[39m\u001b[36morg.scalatest._\u001b[39m"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import $ivy.`org.scalatest::scalatest:3.0.8`\n",
     "import org.scalatest._"
@@ -954,9 +967,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mclass\u001b[39m \u001b[36mTree\u001b[39m\n",
+       "defined \u001b[32mclass\u001b[39m \u001b[36mEmpty\u001b[39m\n",
+       "defined \u001b[32mclass\u001b[39m \u001b[36mNode\u001b[39m"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "// type Tree[A] = 1 + Tree[A] * A * Tree[A]\n",
     "\n",
@@ -974,9 +1000,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mobject\u001b[39m \u001b[36mTree\u001b[39m\n",
+       "\u001b[32mimport \u001b[39m\u001b[36mTree._\u001b[39m"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "object Tree{\n",
     "    \n",
@@ -1015,12 +1053,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mfoldTree\u001b[39m"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def foldTree[A, B](tree: Tree[A])(empty: B)(node: (B, A, B) => B): B = \n",
-    "    ???"
+    "def foldTree[A, B](tree: Tree[A])(\n",
+    "    empty: B)(\n",
+    "    node: (B, A, B) => B): B = \n",
+    "    tree match {\n",
+    "        case Empty() \n",
+    "        => \n",
+    "            empty : B\n",
+    "        case Node(left, root, right) => \n",
+    "            val solLeft: B = foldTree(left)(empty)(node)\n",
+    "            val solRight: B = foldTree(right)(empty)(node)\n",
+    "            node(solLeft : B, root : A, solRight : B) : B\n",
+    "    }"
    ]
   },
   {
@@ -1032,12 +1091,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mnumNodes\u001b[39m"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def numNodes[A](tree: Tree[A]): Int = \n",
-    "    foldTree(tree)(0)((l, _, r) => 1 + l + r)"
+    "    tree match {\n",
+    "        case Empty() => \n",
+    "            0 : Int\n",
+    "        case Node(left, root, right) => \n",
+    "            val numNodesLeft: Int = numNodes(left)\n",
+    "            val numNodesRight: Int = numNodes(right)\n",
+    "            numNodesLeft + numNodesRight + 1 : Int\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mnumNodes\u001b[39m"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def numNodes[A](tree: Tree[A]): Int = \n",
+    "    foldTree(tree)(\n",
+    "        0 : Int)(\n",
+    "        (numNodesLeft: Int, root: A, numNodesRight: Int) =>\n",
+    "            numNodesLeft + numNodesRight + 1 : Int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mnumNodes\u001b[39m"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def numNodes[A](tree: Tree[A]): Int = \n",
+    "    foldTree(tree)(\n",
+    "        0)(\n",
+    "        (numNodesLeft, _, numNodesRight) =>\n",
+    "            numNodesLeft + numNodesRight + 1)"
    ]
   },
   {
@@ -1049,9 +1174,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mclass\u001b[39m \u001b[36mTestTreeNumNodes\u001b[39m"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "class TestTreeNumNodes(\n",
     "    numNodes: Tree[Int] => Int\n",
@@ -1060,6 +1196,7 @@
     "    \"concatenate\" should \"work\" in {\n",
     "        numNodes(void) shouldBe 0\n",
     "        numNodes(leaf(1)) shouldBe 1\n",
+    "        numNodes(Node(Empty(), 1, Empty())) shouldBe 1\n",
     "        numNodes(left(leaf(1), 2)) shouldBe 2\n",
     "        numNodes(node(leaf(1), 2, leaf(3))) shouldBe 3\n",
     "    }\n",
@@ -1068,9 +1205,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[36mres12\u001b[39m: \u001b[32mNode\u001b[39m[\u001b[32mInt\u001b[39m] = \u001b[33mNode\u001b[39m(Empty(), \u001b[32m1\u001b[39m, \u001b[33mNode\u001b[39m(Empty(), \u001b[32m2\u001b[39m, Empty()))"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "right(1, leaf(2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mcmd11$Helper$TestTreeNumNodes:\u001b[0m\n",
+      "\u001b[32mconcatenate\u001b[0m\n",
+      "\u001b[32m- should work\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "run(new TestTreeNumNodes(numNodes))"
    ]
@@ -1200,9 +1367,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mclass\u001b[39m \u001b[36mTestLeaves\u001b[39m"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "class TestLeaves(\n",
     "    leaves: Tree[Int] => List[Int]\n",
@@ -1218,26 +1396,130 @@
     "        leaves(left(right(2, left(right(4, leaf(5)), 3)),1)) shouldBe List(5)\n",
     "        leaves(left(node(leaf(3), 2, leaf(3)), 1)) shouldBe List(3,3)\n",
     "        leaves(node(node(leaf(1),2,leaf(3)),4,node(leaf(5),6,leaf(7)))) shouldBe\n",
-    "            List(1,3,5,7)\n",
+    "            List(1,3) ++ List(5,7)\n",
     "    }\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[36mres22\u001b[39m: \u001b[32mList\u001b[39m[\u001b[32mAny\u001b[39m] = \u001b[33mList\u001b[39m(\u001b[33mList\u001b[39m(\u001b[32m1\u001b[39m, \u001b[32m3\u001b[39m), \u001b[32m5\u001b[39m, \u001b[32m7\u001b[39m)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def leaves[A](tree: Tree[A]): List[A] = \n",
-    "    ???"
+    "List(1,3) :: List(5,7)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mleaves\u001b[39m"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def leaves[A](tree: Tree[A]): List[A] = \n",
+    "    tree match {\n",
+    "        case Empty() => \n",
+    "            List() : List[A]\n",
+    "        case Node(Empty(), root, Empty()) =>\n",
+    "            List(root): List[A]\n",
+    "        case Node(left, _, right) => \n",
+    "            leaves(left) ++ leaves(right)\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mleaves\u001b[39m"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def leaves[A](tree: Tree[A]): List[A] = \n",
+    "    tree match {\n",
+    "        case Empty() => \n",
+    "            List() : List[A]\n",
+    "        case Node(left, root, right) => \n",
+    "            val leavesLeft: List[A] = leaves(left)\n",
+    "            val leavesRight: List[A] = leaves(right)\n",
+    "            if (leavesLeft == Nil && leavesRight == Nil)\n",
+    "                List(root): List[A]\n",
+    "            else leavesLeft ++ leavesRight\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mleaves\u001b[39m"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def leaves[A](tree: Tree[A]): List[A] = \n",
+    "    foldTree(tree)(\n",
+    "        List() : List[A])(\n",
+    "        (leavesLeft: List[A], root: A, leavesRight: List[A]) => \n",
+    "            if (leavesLeft == Nil && leavesRight == Nil)\n",
+    "                List(root): List[A]\n",
+    "            else leavesLeft ++ leavesRight : List[A])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mcmd21$Helper$TestLeaves:\u001b[0m\n",
+      "\u001b[32misDegenerate\u001b[0m\n",
+      "\u001b[32m- should work\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "run(new TestLeaves(leaves))"
    ]
