Live coding session 11 - Móstoles

--- a/PF-3/exercises/ProblemSet5.ipynb
+++ b/PF-3/exercises/ProblemSet5.ipynb
@@ -12,9 +12,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[32mimport \u001b[39m\u001b[36m$ivy.$                               \n",
+       "\u001b[39m\n",
+       "\u001b[32mimport \u001b[39m\u001b[36morg.scalatest._\u001b[39m"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import $ivy.`org.scalatest::scalatest:3.0.8`\n",
     "import org.scalatest._"
@@ -958,11 +971,65 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "object ListStd{\n",
+    "    sealed abstract class List[A]\n",
+    "    case object Nil extends List[Nothing]\n",
+    "    case class Cons[A](head: A, tail: List[A]) extends List[A]\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mclass\u001b[39m \u001b[36mTree\u001b[39m\n",
+       "defined \u001b[32mclass\u001b[39m \u001b[36mEmpty\u001b[39m\n",
+       "defined \u001b[32mclass\u001b[39m \u001b[36mNode\u001b[39m"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "// type Tree[A] = 1 + Tree[A] * A * Tree[A]\n",
     "\n",
     "sealed abstract class Tree[A]\n",
     "case class Empty[A]() extends Tree[A]\n",
     "case class Node[A](left: Tree[A], root: A, right: Tree[A]) extends Tree[A]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[36mres3_0\u001b[39m: \u001b[32mEmpty\u001b[39m[\u001b[32mNothing\u001b[39m] = Empty()\n",
+       "\u001b[36mres3_1\u001b[39m: \u001b[32mNode\u001b[39m[\u001b[32mInt\u001b[39m] = \u001b[33mNode\u001b[39m(Empty(), \u001b[32m1\u001b[39m, Empty())\n",
+       "\u001b[36mres3_2\u001b[39m: \u001b[32mNode\u001b[39m[\u001b[32mInt\u001b[39m] = \u001b[33mNode\u001b[39m(\n",
+       "  \u001b[33mNode\u001b[39m(Empty(), \u001b[32m0\u001b[39m, Empty()),\n",
+       "  \u001b[32m1\u001b[39m,\n",
+       "  \u001b[33mNode\u001b[39m(Empty(), \u001b[32m3\u001b[39m, Empty())\n",
+       ")"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Empty()\n",
+    "Node(Empty(), 1, Empty())\n",
+    "Node(Node(Empty(), 0, Empty()), 1, Node(Empty(), 3, Empty()))"
    ]
   },
   {
@@ -974,9 +1041,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mobject\u001b[39m \u001b[36mTree\u001b[39m\n",
+       "\u001b[32mimport \u001b[39m\u001b[36mTree._\u001b[39m"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "object Tree{\n",
     "    \n",
@@ -997,6 +1076,34 @@
     "}\n",
     "\n",
     "import Tree._"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[36mres7_0\u001b[39m: \u001b[32mNode\u001b[39m[\u001b[32mInt\u001b[39m] = \u001b[33mNode\u001b[39m(Empty(), \u001b[32m3\u001b[39m, Empty())\n",
+       "\u001b[36mres7_1\u001b[39m: \u001b[32mNode\u001b[39m[\u001b[32mInt\u001b[39m] = \u001b[33mNode\u001b[39m(\n",
+       "  \u001b[33mNode\u001b[39m(Empty(), \u001b[32m1\u001b[39m, Empty()),\n",
+       "  \u001b[32m0\u001b[39m,\n",
+       "  \u001b[33mNode\u001b[39m(Empty(), \u001b[32m3\u001b[39m, Empty())\n",
+       ")\n",
+       "\u001b[36mres7_2\u001b[39m: \u001b[32mNode\u001b[39m[\u001b[32mInt\u001b[39m] = \u001b[33mNode\u001b[39m(Empty(), \u001b[32m3\u001b[39m, \u001b[33mNode\u001b[39m(Empty(), \u001b[32m2\u001b[39m, Empty()))"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "leaf(3)\n",
+    "node(leaf(1), 0, leaf(3))\n",
+    "right(3, leaf(2))"
    ]
   },
   {
@@ -1032,12 +1139,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mfoldTree\u001b[39m"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def foldTree[A, B](tree: Tree[A])(\n",
+    "        empty: B)(\n",
+    "        node: (B, A, B) => B ): B = \n",
+    "    tree match {\n",
+    "        case Empty() => \n",
+    "            empty : B\n",
+    "        case Node(left, root, right) => \n",
+    "            val solLeft: B = foldTree(left)(empty)(node)\n",
+    "            val solRight: B = foldTree(right)(empty)(node)\n",
+    "            node(solLeft, root, solRight) : B\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mnumNodes\u001b[39m"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def numNodes[A](tree: Tree[A]): Int = \n",
-    "    foldTree(tree)(0)((l, _, r) => 1 + l + r)"
+    "    tree match {\n",
+    "        case Empty() => \n",
+    "            0 : Int\n",
+    "        case Node(left, root, right) => \n",
+    "            val numNodesLeft: Int = numNodes(left) \n",
+    "            val numNodesRight: Int = numNodes(right)\n",
+    "            numNodesLeft + numNodesRight + 1 : Int\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mnumNodes\u001b[39m"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def numNodes[A](tree: Tree[A]): Int =\n",
+    "    foldTree(tree)(\n",
+    "        0 : Int,\n",
+    "        (numNodesLeft: Int, root: A, numNodesRight: Int) => \n",
+    "            numNodesLeft + numNodesRight + 1 : Int\n",
+    "    )\n",
+    "/*\n",
+    "    tree match {\n",
+    "        case Empty() => \n",
+    "            0 : Int\n",
+    "        case Node(left, root, right) => \n",
+    "            val numNodesLeft: Int = numNodes(left) \n",
+    "            val numNodesRight: Int = numNodes(right)\n",
+    "            numNodesLeft + numNodesRight + 1 : Int\n",
+    "    }*/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mnumNodes\u001b[39m"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def numNodes[A](tree: Tree[A]): Int =\n",
+    "    foldTree(tree)(\n",
+    "        0)(\n",
+    "        (numNodesLeft, root, numNodesRight) => \n",
+    "            numNodesLeft + numNodesRight + 1\n",
+    "    )"
    ]
   },
   {
@@ -1049,9 +1263,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mclass\u001b[39m \u001b[36mTestTreeNumNodes\u001b[39m"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "class TestTreeNumNodes(\n",
     "    numNodes: Tree[Int] => Int\n",
@@ -1068,9 +1293,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mcmd11$Helper$TestTreeNumNodes:\u001b[0m\n",
+      "\u001b[32mconcatenate\u001b[0m\n",
+      "\u001b[32m- should work\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "run(new TestTreeNumNodes(numNodes))"
    ]
@@ -1200,23 +1435,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mclass\u001b[39m \u001b[36mTestLeaves\u001b[39m"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "class TestLeaves(\n",
     "    leaves: Tree[Int] => List[Int]\n",
     ") extends FlatSpec with Matchers {\n",
     "    \n",
     "    \"isDegenerate\" should \"work\" in {\n",
-    "        leaves(void) shouldBe List()\n",
-    "        leaves(leaf(1)) shouldBe List(1)\n",
-    "        leaves(left(leaf(1), 2)) shouldBe List(1)\n",
-    "        leaves(right(2, leaf(1)))  shouldBe List(1)\n",
-    "        leaves(node(leaf(1), 2, leaf(3))) shouldBe List(1,3)\n",
-    "        leaves(left(left(leaf(3), 2), 1)) shouldBe List(3)\n",
-    "        leaves(left(right(2, left(right(4, leaf(5)), 3)),1)) shouldBe List(5)\n",
-    "        leaves(left(node(leaf(3), 2, leaf(3)), 1)) shouldBe List(3,3)\n",
+    "        leaves(void) shouldBe \n",
+    "            List()\n",
+    "        leaves(leaf(1)) shouldBe \n",
+    "            List(1)\n",
+    "        leaves(left(leaf(1), 2)) shouldBe \n",
+    "            List(1)\n",
+    "        leaves(right(2, leaf(1)))  shouldBe \n",
+    "            List(1)\n",
+    "        leaves(node(leaf(1), 2, leaf(3))) shouldBe \n",
+    "            List(1,3)\n",
+    "        leaves(left(left(leaf(3), 2), 1)) shouldBe \n",
+    "            List(3)\n",
+    "        leaves(left(right(2, left(right(4, leaf(5)), 3)),1)) shouldBe \n",
+    "            List(5)\n",
+    "        leaves(left(node(leaf(3), 2, leaf(3)), 1)) shouldBe \n",
+    "            List(3,3)\n",
     "        leaves(node(node(leaf(1),2,leaf(3)),4,node(leaf(5),6,leaf(7)))) shouldBe\n",
     "            List(1,3,5,7)\n",
     "    }\n",
@@ -1225,19 +1479,189 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mleaves\u001b[39m"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def leaves[A](tree: Tree[A]): List[A] = \n",
-    "    ???"
+    "    tree match {\n",
+    "        case Empty() => \n",
+    "            List() : List[A]\n",
+    "        case Node(left: Tree[A], root, right: Tree[A]) =>\n",
+    "            val leavesLeft: List[A] = leaves(left)\n",
+    "            val leavesRight: List[A] = leaves(right)\n",
+    "            if (leavesLeft == Nil && leavesRight == Nil)\n",
+    "                List(root) : List[A]\n",
+    "            else leavesLeft ++ leavesRight\n",
+    "    }"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mleaves\u001b[39m"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def leaves[A](tree: Tree[A]): List[A] = \n",
+    "    tree match {\n",
+    "        case Empty() => \n",
+    "            List() : List[A]\n",
+    "        case Node(Empty(), root, Empty()) => \n",
+    "            List(root)\n",
+    "        case Node(left: Tree[A], _, right: Tree[A]) =>\n",
+    "            val leavesLeft: List[A] = leaves(left)\n",
+    "            val leavesRight: List[A] = leaves(right)\n",
+    "            leavesLeft ++ leavesRight\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mleaves\u001b[39m"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def leaves[A](tree: Tree[A]): List[A] =\n",
+    "    foldTree(tree)(\n",
+    "        List() : List[A])(\n",
+    "        (leavesLeft: List[A], root: A, leavesRight: List[A]) => \n",
+    "           if (leavesLeft == Nil && leavesRight == Nil)\n",
+    "                List(root) : List[A]\n",
+    "            else leavesLeft ++ leavesRight)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mleaves\u001b[39m"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def leaves[A](tree: Tree[A]): List[A] =\n",
+    "    foldTree(tree)(\n",
+    "        List() : List[A])(\n",
+    "        (leavesLeft: List[A], root: A, leavesRight: List[A]) => \n",
+    "            (leavesLeft, root, leavesRight) match {\n",
+    "                    case (Nil, _, Nil) =>\n",
+    "                        List(root) : List[A]\n",
+    "                    case (_, _, _) => \n",
+    "                        leavesLeft ++ leavesRight : List[A]\n",
+    "                }\n",
+    "        )\n",
+    "\n",
+    "/*\n",
+    "    tree match {\n",
+    "        case Empty() => \n",
+    "            List() : List[A]\n",
+    "        case Node(left: Tree[A], root, right: Tree[A]) =>\n",
+    "            val leavesLeft: List[A] = leaves(left)\n",
+    "            val leavesRight: List[A] = leaves(right)\n",
+    "            if (leavesLeft == Nil && leavesRight == Nil)\n",
+    "                List(root) : List[A]\n",
+    "            else leavesLeft ++ leavesRight\n",
+    "    }\n",
+    "    */"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mleaves\u001b[39m"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def leaves[A](tree: Tree[A]): List[A] =\n",
+    "    foldTree(tree)(\n",
+    "        List() : List[A]\n",
+    "    ){\n",
+    "            case (Nil, root, Nil) =>\n",
+    "                List(root) : List[A]\n",
+    "            case (leavesLeft, _, leavesRight) => \n",
+    "                leavesLeft ++ leavesRight : List[A]\n",
+    "        }\n",
+    "\n",
+    "/*\n",
+    "    tree match {\n",
+    "        case Empty() => \n",
+    "            List() : List[A]\n",
+    "        case Node(left: Tree[A], root, right: Tree[A]) =>\n",
+    "            val leavesLeft: List[A] = leaves(left)\n",
+    "            val leavesRight: List[A] = leaves(right)\n",
+    "            if (leavesLeft == Nil && leavesRight == Nil)\n",
+    "                List(root) : List[A]\n",
+    "            else leavesLeft ++ leavesRight\n",
+    "    }\n",
+    "    */"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mcmd21$Helper$TestLeaves:\u001b[0m\n",
+      "\u001b[32misDegenerate\u001b[0m\n",
+      "\u001b[32m- should work\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "run(new TestLeaves(leaves))"
    ]
