--- a/PF-3/templates/3.1-HigherOrderFunctions.ipynb
+++ b/PF-3/templates/3.1-HigherOrderFunctions.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +27,7 @@
        "\u001b[32mimport \u001b[39m\u001b[36m_root_.org.scalatest._\u001b[39m"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2491,9 +2491,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[36mres0\u001b[39m: \u001b[32mArray\u001b[39m[\u001b[32mString\u001b[39m] = \u001b[33mArray\u001b[39m(\u001b[32m\"en\"\u001b[39m, \u001b[32m\"un\"\u001b[39m, \u001b[32m\"\"\u001b[39m, \u001b[32m\"\"\u001b[39m, \u001b[32m\"\"\u001b[39m, \u001b[32m\"\"\u001b[39m, \u001b[32m\"lugar\"\u001b[39m)"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"en un     lugar  \".split(\" \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mclass\u001b[39m \u001b[36mTestLengths\u001b[39m"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "class TestLengths(\n",
     "    lengths: List[String] => List[Int]\n",
@@ -2507,7 +2538,8 @@
     "    \n",
     "    \"lengths\" should \"work\" in {\n",
     "        lengths(paragraph1) shouldBe \n",
-    "            ???\n",
+    "            List(2, 2,  5,2,  2, 6,\n",
+    "                 2, 4, 6, 2, 6,        9)\n",
     "    }\n",
     "}"
    ]
@@ -2521,12 +2553,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mlengthsM\u001b[39m"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def lengthsM(paragraph: List[String]): List[Int] = {\n",
-    "    ???\n",
+    "    var out: List[Int] = List()\n",
+    "    for (sentence <- paragraph)\n",
+    "        for (word <- sentence.split(\" \"))\n",
+    "            if (word != \"\") \n",
+    "                out = word.length :: out\n",
+    "    out.reverse\n",
     "}\n"
    ]
   },
@@ -2539,9 +2587,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mcmd5$Helper$TestLengths:\u001b[0m\n",
+      "\u001b[32mlengths\u001b[0m\n",
+      "\u001b[32m- should work\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "run(new TestLengths(lengthsM))"
    ]
@@ -2555,19 +2613,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mtype\u001b[39m \u001b[36mSentence\u001b[39m\n",
+       "defined \u001b[32mtype\u001b[39m \u001b[36mWord\u001b[39m"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def lengthsHOF(paragraph: List[String]): List[Int] = \n",
-    "    ???"
+    "type Sentence = String\n",
+    "type Word = String"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mlengthsHOF\u001b[39m"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def lengthsHOF(paragraph: List[String]): List[Int] = \n",
+    "     paragraph                                // List[Sentence]\n",
+    "        .flatMap(sentence => \n",
+    "                 sentence.split(\" \").toList)  // List[Word]\n",
+    "        .filter(word => word != \"\" : Boolean) // List[Word]\n",
+    "        .map(word => word.length)             // List[Int]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mlengthsHOF\u001b[39m"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def lengthsHOF(paragraph: List[String]): List[Int] = \n",
+    "     paragraph                                // List[Sentence]\n",
+    "        .flatMap(_.split(\" \").toList)         // List[Word]\n",
+    "        .filter(_ != \"\")                      // List[Word]\n",
+    "        .map(_.length)                        // List[Int]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mcmd5$Helper$TestLengths:\u001b[0m\n",
+      "\u001b[32mlengths\u001b[0m\n",
+      "\u001b[32m- should work\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "run(new TestLengths(lengthsHOF))"
    ]
@@ -2598,12 +2727,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mlengthsFC\u001b[39m"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def lengthsFC(paragraph: List[String]): List[Int] = \n",
-    "    ???"
+    "    for {\n",
+    "        sentence <- paragraph                              \n",
+    "        word <- sentence.split(\" \").toList if word != \"\"\n",
+    "    } yield word.length   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mcmd5$Helper$TestLengths:\u001b[0m\n",
+      "\u001b[32mlengths\u001b[0m\n",
+      "\u001b[32m- should work\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "run(new TestLengths(lengthsFC))"
    ]
   },
   {
@@ -2611,9 +2773,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "run(new TestLengths(lengthsFC))"
-   ]
+   "source": []
   }
  ],
  "metadata": {
